				Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       2.0 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.0.0 patched


BUG FIXES

    o	model.frame.default() takes row names from the response
	variable if that has suitable names and there is no 'data'
	argument.  (This follows S but was not previously implemented
	in R.)

    o	write.table() was not respecting the 'dec' argument for complex
	numbers.

    o	write.table() printed a mixture of numeric and complex numbers
	as all complex.  (PR#7260)

    o   R CMD INSTALL failed with versioned installs on packages which
	save images (only).

    o   dlogis() gave NaN not 0 for large negative arguments.

    o   Building on Alpha OSF/1 no longer forces the C flag -std1,
	which appears to be no longer needed.  (PR#7257)

    o   Importing from another namespace was broken for versioned
	installs, incorrectly reporting something like 
	"package 'imported_from' does not have a name space".

    o	The compiler flag -mieee-fp is no longer used on i386 Linux
	(these days it is only passed to the linker and was only
	invoked for compilation steps).

    o   The GNOME interface under Linux/Unix was broken. (PR#7276)

    o	For the jpeg/png devices under Linux/Unix, under certain rare
	circumstances clipping needed to be cleared before starting a
	new page.  (PR#7270, which has been the case since the devices
	were introduced in 1.1.0.)




        *********************************************************
        *                                                       *
        *       News of 1.x.y and 2.0.0 is in file `ONEWS'      *
        *       News of 1.0.0 and earlier is in file `OONEWS'   *
        *                                                       *
        *********************************************************